<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/txtNome"
        android:text="@string/txtNome"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtNome"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtNomeMsg"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtEnd"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtEndMsg"
        android:inputType="text"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edtCep"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtCepMsg"
        android:inputType="text"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edtEstd"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtEstdMsg"
        android:inputType="text"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edtCida"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtCidaMsg"
        android:inputType="text"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/edtBair"
        android:layout_width="253sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autofillHints="name"
        android:hint="@string/txtBairMsg"
        android:inputType="text"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:text="@string/btnCadastrar"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>